# slideAgents

./: .gitignore  README.md  app.py  orchestrator2.md  orchestrator_plan.md  pyproject.toml  requirements.txt  slideExplainer_input.md  test.txt  xcaliDraw-Diagrams.excalidraw
.github/: copilot-instructions.md
docs/: progress.md
docs/ai/: memory.md
docs/sw/: API_Specification.yaml  OauthInsturctions.md  PRD.md  dataModel.md  enviorment_and_tech.md  execution_plan.md  instructions.md  prompts.md  sequenceDiagarm.md  template_explainer.md  workflowDescription.md
scripts/: db_test_entry.py  debug_explain_single_layout.py  explain_all_layouts.py  explain_single_layout.py  explain_template.py  init_db.py  list_layouts.py  slides_batch_create_slide.py  test_gemini_model.py  test_openai_model.py  verify_db.py
src/agents/orchestrator_agent/: __init__.py  data_handler.py  models.py  orchestrator.py  prompts.py  routes.py
src/agents/orchestrator_agent/templates/: orchestrator_form.html  orchestrator_result.html
src/agents/template_understanding/: extractor.py  graph.py  schemas.py  service.py
src/db/: mongo.py  template_dal.py  users_dal.py
src/slide_generation/: __init__.py  adapter.py  mapper.py  models.py  planner_service.py  slides_api.py  storage.py  validator.py  xml_parser.py
